--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="wrapper">
-        <img class="night__city-pic" src="img/night-city.jpg" alt="">
+        <img class="night__city-pic" src="https://images.wallpapersden.com/image/download/city-chicago-night_ZmxuaG2UmZqaraWkpJRsa21lrWloZ2U.jpg" alt="">
     </div>
 </body>
 
