Changes song and name

--- a/playlist/index.html
+++ b/playlist/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sidebar</title>
+    <title>playlist</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
         <aside>
             <div class="aside__header">
                 <img src="img/woman.jpg" alt="woman" class="aside__header-pic">
-                <p>Jay Anders</p>
+                <p>Billie Eilish</p>
             </div>
             <ul class="aside__list">
                 <li>
@@ -33,27 +33,17 @@
         </aside>
 
         <main>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, ipsam voluptatem minima laudantium
-                itaque natus dicta incidunt a mollitia impedit magnam cupiditate delectus sed? Autem ipsam quos quia
-                placeat
-                velit!
-                Consequuntur nobis perspiciatis nihil unde eligendi voluptatibus odit libero ipsum corporis quia
-                accusamus,
-                assumenda distinctio minima sapiente magnam molestias recusandae natus hic. Minus rerum totam nostrum
-                cumque
-                illo quam sapiente.
-                Harum numquam vel iste similique illum doloribus reprehenderit? Inventore excepturi similique saepe
-                iusto?
-                Doloremque magni, iusto error nam ipsa minus. Nihil ab culpa voluptates corrupti ad quibusdam beatae
-                corporis sit.
-                Eveniet minus esse magnam nisi deleniti eum, quisquam necessitatibus vero sint omnis accusamus quas
-                reprehenderit unde culpa quasi dignissimos mollitia vel reiciendis. Fugit at iusto quidem eaque
-                suscipit,
-                incidunt harum.
-                Omnis eum, repudiandae, laudantium perferendis deserunt rerum ad quas ipsa fugiat, aperiam quos! Ipsum
-                enim
-                iste aliquam placeat, deleniti aut aspernatur fuga qui sequi doloribus magnam rerum debitis. Temporibus,
-                qui!
+            <p>I'm not crying on the phone when you call
+                What's the use in begging you to stay?
+                I'm not trying to say words anymore
+                Cut me loose, cause you're to far away
+                
+                To make me feel better and make it alright
+                To give me your sweater, hold my hand tight
+                Seven days in limbo, push me out the window
+                Nothing in common, nothing to lose
+                Nothing but problems between me and you
+                With your arms akimbo seven days in limbo
             </p>
         </main>
     </div>
