--- a/playlist/index.html
+++ b/playlist/index.html
@@ -13,8 +13,8 @@
     <div class="conteiner">
         <aside>
             <div class="aside__header">
-                <img src="img/woman.jpg" alt="woman" class="aside__header-pic">
-                <p>Billie Eilish</p>
+                <img src="https://w-dog.ru/wallpapers/4/2/452110934931644/osen-portret-estestvennyj-svet-vzglyad-portret-prelest.jpg" alt="woman" class="aside__header-pic">
+                <p>Edward Regan Murphy</p>
             </div>
             <ul class="aside__list">
                 <li>
@@ -33,17 +33,27 @@
         </aside>
 
         <main>
-            <p>I'm not crying on the phone when you call
-                What's the use in begging you to stay?
-                I'm not trying to say words anymore
-                Cut me loose, cause you're to far away
+            <p>I thought love was only true in fairy tales
+                Meant for someone else but not for me
+                Love was out to get me
+                That's the way it seemed
+                Disappointment haunted all of my dreams
+                Then I saw her face, now I'm a believer
+                Not a trace, of doubt in my mind
+                I'm in love, and I'm a believer
+                I couldn't leave her if I tried
+                No not if I tried
+                I thought love was more or less a giving thing
+                Seems the more I gave the less I got
+                What's the use in tryin'
+                All you get is pain
+                When I needed sunshine I got rain
+                Then I saw her face, now I'm a believer
+                Not a trace, of doubt in my mind
+                I'm in love and I'm a believer
+                I couldn't leave her if I tried
+                Not if I tried
                 
-                To make me feel better and make it alright
-                To give me your sweater, hold my hand tight
-                Seven days in limbo, push me out the window
-                Nothing in common, nothing to lose
-                Nothing but problems between me and you
-                With your arms akimbo seven days in limbo
             </p>
         </main>
     </div>
