Changed background and color details

--- a/form/index.html
+++ b/form/index.html
@@ -75,7 +75,7 @@
 
             <div>
                 <input type="checkbox" id="smoking-room" name="smoking-room">
-                <label class="checkbox" for="smoking-room">Smoking room:</label>
+                <label class="checkbox" for="smoking-room">Kitchen:</label>
             </div>
 
 
