changed description table

--- a/form/index.html
+++ b/form/index.html
@@ -11,7 +11,6 @@
     <form name="Registration form">
         <fieldset>
             <legend class="legend">Registration form:</legend>
-            <img class="img" src="dogovor.jpg" alt="facebook">
             <div class="border">
                 <input class="bordergreen" type="name" maxlength="16" placeholder="First Name" size="50"
                     spellceck="false" reguired="false" required>
@@ -82,6 +81,10 @@
             <div>
                 <input type="checkbox" name="different-rooms" id="different-rooms">
                 <label class="checkbox-label" for="different-rooms">Different rooms:</label>
+            </div>
+            <div>
+                <input type="checkbox" id="smoking-room" name="smoking-room">
+                <label class="checkbox" for="smoking-room">Smoking room:</label>
             </div>
 
             <div>
