Changed description button and color

--- a/form/index.html
+++ b/form/index.html
@@ -68,7 +68,7 @@
 
 
             <div class="date">
-                <label>Check-in or check-out date:</label>
+                <label>Check-in or check-out date and time:</label>
                 <input type="datetime-local" size="25" required>
             </div>
 
