--- a/composible  table/index.html
+++ b/composible  table/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="card">
-        <h3 class="type">basic</h3>
+        <h3 class="type">simple</h3>
         <div class="price price-basic">
             <span class="dollar-sign">$</span>20
         </div>
@@ -18,7 +18,6 @@
         <ul class="details">
             <li><span>Free</span> Stickers</li>
             <li><span>Free</span> Delivery</li>
-            <li><span>24/7</span> Support</li>
         </ul>
 
         <div class="subscribe">
@@ -27,7 +26,7 @@
     </div>
 
     <div class="card">
-        <h3 class="type">awesome</h3>
+        <h3 class="type">classic</h3>
         <div class="price price-awesome">
             <span class="dollar-sign">$</span>50
         </div>
